# FlamApp

./: .gitignore  COMMIT_LOG.txt  README.md
FlamApp/: settings.gradle
FlamApp/app/: AndroidManifest.xml  build.gradle  settings.gradle
FlamApp/app/src/main/cpp/: CMakeLists.txt  edge_detector.cpp  native-lib.cpp
FlamApp/app/src/main/java/com/flamapp/demo/: GLRenderer.kt  JNIInterface.kt  MainActivity.kt
FlamApp/scripts/: fetch_opencv.sh
FlamApp/web/: index.html  main.ts  processed_base64.txt
